--- a/Perpus/nbproject/project.properties
+++ b/Perpus/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/Perpus.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.com.mysql.jdbc_5.1.5.jar=com.mysql.jdbc_5.1.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.com.mysql.jdbc_5.1.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
